--- a/templates/restaurant.html
+++ b/templates/restaurant.html
@@ -1,61 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mall Safe Meals</title>
-  
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" 
-    integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" 
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="css/style.css">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" 
-    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-</head>
-
-<body>
-
-    <!-- HEADER SECTION -->
-    <section style="padding-left: 7%; padding-right: 4%;">
-        <div class="row col-lg-12 col-sm-12">
-          <div class="col-sm-4 col-lg-10">
-              <img src="img/mall_safe_meal.png" alt="" srcset=""> 
-              <ul class="entregar">
-                <li href="" class="cinzaMain" >Entregar Agora</li>
-                <li href="" >Localização da Mesa <i class="fa-solid fa-chevron-down corPrincipal"></i></li> 
-            </ul>
-          </div>
-      
-          <div class="col-lg-2 col-sm-12 text-center" >
-              <i class="fa-solid fa-lock fa-2x corPrincipal my-4 mx-2"></i>
-              <i class="fa-solid fa-user fa-2x corPrincipal my-4 mx-2 "></i>
-              <i class="fa-solid fa-cart-shopping fa-2x corPrincipal my-4 mx-2"></i>
-          </div>
-
-
-        </div>
-    </section>
-
-    
-   <!-- MAIN SECTION -->
-    <main  style="justify-content: center; display: flex; ">
-    <!-- SEARCH BAR -->
-      
-        <div class="search "  >
-          <div class="icon" >
-            <button type="submit"></button>
-          </div>
-          <div class="input">
-            <input type="text" placeholder="Procurar.." id="mySearch">
-          </div>
-        </div>
- 
-  </main>
+{% include 'header.html' %}
  <!-- RESTAURANTS CATEGORIES -->
 <div class="container my-4 tryOut" style="align-items: center;">
   <h2 class="titleFeatureCategoria text-center" style="padding-top: 20px;">Nome Restaurante</h2>
@@ -90,86 +34,28 @@
 
   <div id="tab-1 " class="tab-pane fade show p-0 active my-5">
     <div class="row g-4">
+      {% for item in items %}
       <div class="col-lg-6">
-        <div class="d-flex align-items-center"><img class="flex-shrink-0 img-fluid rounded" src="https://i2-prod.mirror.co.uk/incoming/article21553634.ece/ALTERNATES/s1200c/2_BLPP_CHP_PMI_o220718JPG.jpg" alt="website template image" style="width:80px;">
-          <div class="w-100 d-flex flex-column text-start ps-4">
-            <h5 class="d-flex justify-content-between border-bottom pb-2"><span>Chicken Burger</span> <span class="text-secondary">€ 5.00</span></h5>
-            <small class="fst-italic">Ipsum ipsum clita erat amet dolor justo diam</small> <button class="my-1 corPrincipal btnAdd">adicionar ao carrinho</button></div>
+        <div class="d-flex align-items-center"><img class="flex-shrink-0 img-fluid rounded" src="{{item.imagem}}" alt="website template image" style="width:80px;">
+          <div class="w-100 d-flex flex-column text-start ps-4 ">
+            <h5 class="d-flex justify-content-between border-bottom ">
+              <span>{{item.nome}}</span> <span class="text-secondary">€ {{item.preco}}</span>
+            </h5>
+            <h5>
+               <button class="corPrincipal btnAdd"><i class="fa-solid fa-cart-plus"></i> carrinho</button>
+            </h5>
+          </div>
         </div>
       </div>
-      <div class="col-lg-6">
-        <div class="d-flex align-items-center"><img class="flex-shrink-0 img-fluid rounded" src="https://i2-prod.mirror.co.uk/incoming/article21553634.ece/ALTERNATES/s1200c/2_BLPP_CHP_PMI_o220718JPG.jpg" alt="website template image" style="width:80px;">
-          <div class="w-100 d-flex flex-column text-start ps-4">
-            <h5 class="d-flex justify-content-between border-bottom pb-2"><span>Chicken Burger</span> <span class="text-secondary">€ 5.00</span></h5>
-            <small class="fst-italic">Ipsum ipsum clita erat amet dolor justo diam</small> <button class="my-1 corPrincipal btnAdd">adicionar ao carrinho</button></div>
-        </div>
-      </div>
-      <div class="col-lg-6">
-        <div class="d-flex align-items-center"><img class="flex-shrink-0 img-fluid rounded" src="https://i2-prod.mirror.co.uk/incoming/article21553634.ece/ALTERNATES/s1200c/2_BLPP_CHP_PMI_o220718JPG.jpg" alt="website template image" style="width:80px;">
-          <div class="w-100 d-flex flex-column text-start ps-4">
-            <h5 class="d-flex justify-content-between border-bottom pb-2"><span>Chicken Burger</span> <span class="text-secondary">€ 5.00</span></h5>
-            <small class="fst-italic">Ipsum ipsum clita erat amet dolor justo diam</small> <button class="my-1 corPrincipal btnAdd">adicionar ao carrinho</button></div>
-        </div>
-      </div>
-      <div class="col-lg-6">
-        <div class="d-flex align-items-center"><img class="flex-shrink-0 img-fluid rounded" src="https://i2-prod.mirror.co.uk/incoming/article21553634.ece/ALTERNATES/s1200c/2_BLPP_CHP_PMI_o220718JPG.jpg" alt="website template image" style="width:80px;">
-          <div class="w-100 d-flex flex-column text-start ps-4">
-            <h5 class="d-flex justify-content-between border-bottom pb-2"><span>Chicken Burger</span> <span class="text-secondary">€ 5.00</span></h5>
-            <small class="fst-italic">Ipsum ipsum clita erat amet dolor justo diam</small> <button class="my-1 corPrincipal btnAdd">adicionar ao carrinho</button></div>
-        </div>
-      </div>
-      <div class="col-lg-6">
-        <div class="d-flex align-items-center"><img class="flex-shrink-0 img-fluid rounded" src="https://i2-prod.mirror.co.uk/incoming/article21553634.ece/ALTERNATES/s1200c/2_BLPP_CHP_PMI_o220718JPG.jpg" alt="website template image" style="width:80px;">
-          <div class="w-100 d-flex flex-column text-start ps-4">
-            <h5 class="d-flex justify-content-between border-bottom pb-2"><span>Chicken Burger</span> <span class="text-secondary">€ 5.00</span></h5>
-            <small class="fst-italic">Ipsum ipsum clita erat amet dolor justo diam</small> <button class="my-1 corPrincipal btnAdd">adicionar ao carrinho</button></div>
-        </div>
-      </div>
-      <div class="col-lg-6">
-        <div class="d-flex align-items-center"><img class="flex-shrink-0 img-fluid rounded" src="https://i2-prod.mirror.co.uk/incoming/article21553634.ece/ALTERNATES/s1200c/2_BLPP_CHP_PMI_o220718JPG.jpg" alt="website template image" style="width:80px;">
-          <div class="w-100 d-flex flex-column text-start ps-4">
-            <h5 class="d-flex justify-content-between border-bottom pb-2"><span>Chicken Burger</span> <span class="text-secondary">€ 5.00</span></h5>
-            <small class="fst-italic">Ipsum ipsum clita erat amet dolor justo diam</small> <button class="my-1 corPrincipal btnAdd">adicionar ao carrinho</button></div>
-        </div>
-      </div>
-      
+      {% endfor %}
+
     </div>
   </div>
  
 </div>
    
 
-<footer class="footerBackground text-center text-white">
-  <!-- Grid container -->
-  <div class="container p-4 pb-0">
-    <!-- Section: Social media -->
-    <section class="mb-4">
-      <!-- Instagram -->
-      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
-        ><i class="fab fa-instagram"></i
-      ></a>
-
-      <!-- Linkedin -->
-      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
-        ><i class="fab fa-linkedin-in"></i
-      ></a>
-
-      <!-- Github -->
-      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
-        ><i class="fab fa-github"></i
-      ></a>
-    </section>
-    <!-- Section: Social media -->
-  </div>
-  <!-- Grid container -->
-
-  <!-- Copyright -->
-  <div class="text-center p-3" style="background-color: var(--color-primary)">
-    © 2023 Copyright:
-    <a class="text-white" href="https://ivo-nunes.com/">Ivo-Nunes.com</a>
-  </div>
-  <!-- Copyright -->
-</footer>
+{% include 'footer.html' %}
 
 
 
