--- a/templates/restaurant.html
+++ b/templates/restaurant.html
@@ -1,5 +1,6 @@
 
 {% include 'header.html' %}
+{% load static %}
  <!-- RESTAURANTS CATEGORIES -->
 <div class="container my-4 tryOut" style="align-items: center;">
   <h2 class="titleFeatureCategoria text-center" style="padding-top: 20px;">Nome Restaurante</h2>
@@ -53,10 +54,8 @@
   </div>
  
 </div>
-   
 
 {% include 'footer.html' %}
-
 
 
 </body>
