--- a/templates/header.html
+++ b/templates/header.html
@@ -17,6 +17,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" 
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="{% static 'css/alert.css' %}">
+
   </head>
 
 <body>
@@ -28,12 +29,14 @@
               <img src="{% static 'images/mall_safe_meal.png' %}" alt="" srcset=""> 
               <ul class="entregar">
                 <li href="" class="cinzaMain" >Entregar Agora</li>
-                <li href="" >Localização da Mesa <i class="fa-solid fa-chevron-down corPrincipal"></i></li> 
+                <li href="" >Localização da Mesa <i class="fa-solid fa-chevron-down corPrincipal" data-bs-toggle="modal" data-bs-target="#exampleModal"></i></li> 
             </ul>
           </div>
       
           <div class="col-lg-2 col-sm-12 text-center" >
-              <i class="fa-solid fa-lock fa-2x corPrincipal my-4 mx-2"></i>
+            {% if request.user != 'AnonymousUser' %}
+              <a href=""><i class="fa-solid fa-lock fa-2x corPrincipal my-4 mx-2"></i></a> 
+            {% endif %}
               <i class="fa-solid fa-user fa-2x corPrincipal my-4 mx-2 "></i>
               <i class="fa-solid fa-cart-shopping fa-2x corPrincipal my-4 mx-2"></i>
           </div>
@@ -57,3 +60,30 @@
         </div>
  
   </main>
+
+  <!-- Modal -->
+  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="exampleModalLabel">Localização da sua mesa</h1>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          Você esta sentado na mesa {{ mesa }}
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <script>
+    const myModal = document.getElementById('myModal')
+    const myInput = document.getElementById('myInput')
+    
+    myModal.addEventListener('shown.bs.modal', () => {
+      myInput.focus()
+    })
+  </script>
