--- a/templates/restaurant.html
+++ b/templates/restaurant.html
@@ -3,7 +3,8 @@
 {% load static %}
  <!-- RESTAURANTS CATEGORIES -->
 <div class="container my-4 tryOut" style="align-items: center;">
-  <h2 class="titleFeatureCategoria text-center" style="padding-top: 20px;">Nome Restaurante</h2>
+  <a href="{% url 'home' mesa %}"><button class="corPrincipal btnAdd">voltar</button></a>
+  <h2 class="titleFeatureCategoria text-center" style="padding-top: 20px;">{{restaurante.nome}}</h2>
   <h4 class="text-center text-secondary">Bem vindo..</h4>
   <h5 class="text-center"><small>Escolha os seu items:</small></h5>
 
@@ -35,9 +36,14 @@
 
   <div id="tab-1 " class="tab-pane fade show p-0 active my-5">
     <div class="row g-4">
+      {% if items %}
       {% for item in items %}
       <div class="col-lg-6">
+        {% if restapi %}
         <div class="d-flex align-items-center"><img class="flex-shrink-0 img-fluid rounded" src="{{item.imagem}}" alt="website template image" style="width:80px;">
+         {% else %} 
+         <div class="d-flex align-items-center"><img class="flex-shrink-0 img-fluid rounded" src="{% static item.imagem.url %}" alt="website template image" style="width:80px;">
+         {% endif %}
           <div class="w-100 d-flex flex-column text-start ps-4 ">
             <h5 class="d-flex justify-content-between border-bottom ">
               <span>{{item.nome}}</span> <span class="text-secondary">€ {{item.preco}}</span>
@@ -49,6 +55,9 @@
         </div>
       </div>
       {% endfor %}
+      {% else %}
+      <h5 class="text-center">Sem items para apresentar deste restaurante</h5>
+      {% endif %}
 
     </div>
   </div>
@@ -56,7 +65,6 @@
 </div>
 
 {% include 'footer.html' %}
-
 
 </body>
 </html>
