--- a/templates/cart.html
+++ b/templates/cart.html
@@ -17,7 +17,7 @@
 				<br>
 				<table class="table">
 					<tr>
-						<th><h5>Items: <strong>{{numero_total}}</strong></h5></th>
+						<th><h5>Items: <strong>{{pedido.get_numero_items}}</strong></h5></th>
 						<th><h5>Total:<strong> {{pedido.get_total|floatformat:2}} €</strong></h5></th>
 						<th>
 							<a  style="float:right; margin:5px; width:220px;" class="btn   btnAdd" href="#">Finalizar Compra</a>
