--- a/templates/cart.html
+++ b/templates/cart.html
@@ -3,16 +3,16 @@
 {% load static %}
  <!-- RESTAURANTS CATEGORIES -->
 <div class="container my-4 tryOut" style="align-items: center;">
-  <a href="{% url 'home' mesa %}"><button class="corPrincipal btnAdd" style="width:250px;">&#x2190; Continuar a Comprar</button></a>
+ 
   <h2 class="titleFeatureCategoria text-center" style="padding-top: 20px;">Carrinho de Compras</h2>
-
-  <h5 class="text-center">O seu pedido contêm os seguintes items:</h5>
-
 
   <div class="row">
 
 		<div class="col-lg-12">
+			
 			<div class="box-element">
+				<br>
+				<a href="{% url 'home' mesa %}"><button class="corPrincipal btnAdd" style="width:225px;">&#x2190; Continuar a Comprar</button></a>
 				<br>
 				<br>
 				<table class="table">
@@ -20,7 +20,7 @@
 						<th><h5>Items: <strong>{{pedido.get_numero_items}}</strong></h5></th>
 						<th><h5>Total:<strong> {{pedido.get_total|floatformat:2}} €</strong></h5></th>
 						<th>
-							<a  style="float:right; margin:5px; width:220px;" class="btn   btnAdd" href="#">Finalizar Compra</a>
+							<a  style="float:right; margin:5px; width:220px;" class="btn   btnAdd" href="{% url 'checkout' %}">Finalizar Compra</a>
 						</th>
 					</tr>
 				</table>
@@ -32,11 +32,11 @@
 
 				<div class="cart-row">
 					<div style="flex:2"></div>
-          <div style="flex:2" class="dontShow"><strong>Restaurante</strong></div>
-					<div style="flex:2"><strong>Item</strong></div>
-					<div style="flex:1"><strong>Peço</strong></div>
-					<div style="flex:1"><strong id="qtd" >Quantidade</strong></div>
-					<div style="flex:1"><strong>Total</strong></div>
+          <div style="flex:2; font-size:1.2rem;" class="dontShow corPrincipal"><strong>Restaurante</strong></div>
+					<div style="flex:2; font-size:1.2rem; " class="corPrincipal"><strong>Item</strong></div>
+					<div style="flex:1; font-size:1.2rem;" class="corPrincipal"><strong>Peço</strong></div>
+					<div style="flex:1; font-size:1.2rem;" class="corPrincipal"><strong id="qtd" >Quantidade</strong></div>
+					<div style="flex:1; font-size:1.2rem;" class="corPrincipal"><strong>Total</strong></div>
 				</div>
 	{% for item in items %}
 				<div class="cart-row">
@@ -47,9 +47,9 @@
 					<div style="flex:1">
 						<p class="quantity">{{ item.quantidade }}</p>
 						<div class="quantity">
-							<img class="chg-quantity update-cart "  data-product=# data-action="add"
+							<img class="chg-quantity update-cart"  data-item={{item.item.id}} data-action="add"
 								 src="{% static  'images/arrow-up.png' %}">
-							<img class="chg-quantity update-cart " data-product=# data-action="remove"
+							<img class="chg-quantity update-cart" data-item={{item.item.id}} data-action="remove"
 								 src="{% static  'images/arrow-down.png' %}">
 						</div>
 					</div>
@@ -61,33 +61,34 @@
 	</div>
 </div>
 {% include 'footer.html' %}
+<script src="{% static 'js/carrinho.js'  %}"></script>
 <script>
+	function getBrowserSize(){
+		var w, h;
 
-function getBrowserSize(){
-       var w, h;
+			if(typeof window.innerWidth != 'undefined')
+			{
+			w = window.innerWidth; //other browsers
+			h = window.innerHeight;
+			} 
+			else if(typeof document.documentElement != 'undefined' && typeof    
+			document.documentElement.clientWidth != 'undefined' && document.documentElement.clientWidth != 0) 
+			{
+			w =  document.documentElement.clientWidth; //IE
+			h = document.documentElement.clientHeight;
+			}
+			else{
+			w = document.body.clientWidth; //IE
+			h = document.body.clientHeight;
+			}
+		return {'width':w, 'height': h};
+	}
 
-         if(typeof window.innerWidth != 'undefined')
-         {
-          w = window.innerWidth; //other browsers
-          h = window.innerHeight;
-         } 
-         else if(typeof document.documentElement != 'undefined' && typeof      document.documentElement.clientWidth != 'undefined' && document.documentElement.clientWidth != 0) 
-         {
-          w =  document.documentElement.clientWidth; //IE
-          h = document.documentElement.clientHeight;
-         }
-         else{
-          w = document.body.clientWidth; //IE
-          h = document.body.clientHeight;
-         }
-       return {'width':w, 'height': h};
-}
-
-if(parseInt(getBrowserSize().width) < 1026){
-  document.getElementById("qtd").innerHTML = "";
-  document.getElementById("qtd").innerHTML = "Qtd";
- 
-}
+	if(parseInt(getBrowserSize().width) < 1026){
+	document.getElementById("qtd").innerHTML = "";
+	document.getElementById("qtd").innerHTML = "Qtd";
+	
+	}
 </script>
 </body>
 </html>
