--- a/templates/header.html
+++ b/templates/header.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mall Safe Meals</title>
+    <link rel="icon" href="{% static 'images/favicon.png' %}">
     
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -18,6 +19,26 @@
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="{% static 'css/alert.css' %}">
 
+    <script>
+    var user = '{{request.user}}'
+    function getToken(name) {
+          var cookieValue = null;
+          if (document.cookie && document.cookie !== '') {
+            var cookies = document.cookie.split(';');
+            for (let i = 0; i < cookies.length; i++) {
+              var cookie = cookies[i].trim();
+              // Does this cookie string begin with the name we want?
+              if (cookie.substring(0, name.length + 1) === (name + '=')) {
+                cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                break;
+              }
+            }
+          }
+          return cookieValue;
+        }
+
+    var csrftoken = getToken('csrftoken');	
+    </script>
   </head>
 
 <body>
@@ -68,7 +89,7 @@
           Você esta sentado na mesa {{ mesa }}
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
+          <button type="button" class="btn btnAdd" data-bs-dismiss="modal">Fechar</button>
         </div>
       </div>
     </div>
@@ -95,13 +116,3 @@
     </div>
   
 
-  <script>
-
-    const myModal = document.getElementById('myModal')
-    const myInput = document.getElementById('myInput') 
-
-    myModal.addEventListener('shown.bs.modal', () => {
-      myInput.focus()
-    })
-
-  </script>
