--- a/templates/restaurant.html
+++ b/templates/restaurant.html
@@ -5,8 +5,7 @@
 <div class="container my-4 tryOut" style="align-items: center;">
   <a href="{% url 'home' mesa %}"><button class="corPrincipal btnAdd">voltar</button></a>
   <h2 class="titleFeatureCategoria text-center" style="padding-top: 20px;">{{restaurante.nome}}</h2>
-  <h4 class="text-center text-secondary">Bem vindo..</h4>
-  <h5 class="text-center"><small>Escolha os seu items:</small></h5>
+  
 
 <div class="text-center my-5">
   <ul class="nav nav-pills d-inline-flex justify-content-center  border-bottom mb-5 ">
@@ -49,7 +48,7 @@
               <span>{{item.nome}}</span> <span class="text-secondary">€ {{item.preco}}</span>
             </h5>
             <h5>
-               <button class="corPrincipal btnAdd"><i class="fa-solid fa-cart-plus"></i> carrinho</button>
+               <button class="corPrincipal btnAdd update-cart"  data-item={{item.id}} data-action="add" ><i class="fa-solid fa-cart-plus"></i> carrinho</button>
             </h5>
           </div>
         </div>
@@ -65,6 +64,6 @@
 </div>
 
 {% include 'footer.html' %}
-
+<script src="{% static 'js/carrinho.js' %}"></script>
 </body>
 </html>
