--- a/templates/edit_profile.html
+++ b/templates/edit_profile.html
@@ -21,7 +21,7 @@
                 {% for field in form %}
                 <!-- Input:Text -->
                 <div class="form__field">
-                    <label for="formInput#text"><b style="font-size:1.2rem;">{{field.label}}</b></label>
+                    <label ><b style="font-size:1.2rem;">{{field.label}}</b></label>
                     {{field}}
                 </div>
                 {% endfor %}
