--- a/static/css/style.css
+++ b/static/css/style.css
@@ -244,6 +244,11 @@ background-color: var(--color--primary);
     height: 100px;
     border-radius: 15px;
 }
+.row-image-checkout{
+	width: 50px;
+    height: 50px;
+    border-radius: 15px;
+}
 
   a{
     text-decoration: none;
@@ -341,3 +346,55 @@ padding-left: 0;
 }
   
 
+
+.hidden{
+    display:none;
+}
+
+
+#alertBox {
+    position:relative;
+    width:300px;
+    min-height:100px;
+    margin-top:50px;
+    border:1px solid #666;
+    background-color:#fff;
+    background-repeat:no-repeat;
+    background-position:20px 30px;
+}
+
+#modalContainer > #alertBox {
+    position:fixed;
+}
+
+#alertBox h1 {
+    margin:0;
+    font:bold 0.9em verdana,arial;
+    background-color:#3073BB;
+    color:#FFF;
+    border-bottom:1px solid #000;
+    padding:2px 0 2px 5px;
+}
+
+#alertBox p {
+    font:0.7em verdana,arial;
+    height:50px;
+    padding-left:5px;
+    margin-left:55px;
+}
+
+#alertBox #closeBtn {
+    display:block;
+    position:relative;
+    margin:5px auto;
+    padding:7px;
+    border:0 none;
+    width:70px;
+    font:0.7em verdana,arial;
+    text-transform:uppercase;
+    text-align:center;
+    color:#FFF;
+    background-color:#357EBD;
+    border-radius: 3px;
+    text-decoration:none;
+}
