--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -1,86 +1,209 @@
 
 {% include 'header.html' %}
 {% load static %}
+<link rel="stylesheet" href="{% static 'css/form.css' %}">
+<link rel="stylesheet" href="{% static 'css/alertPrompt.css' %}">
  <!-- RESTAURANTS CATEGORIES -->
 <div class="container my-4 tryOut" style="align-items: center;">
  
   <h2 class="titleFeatureCategoria text-center" style="padding-top: 20px;">Finalizar Compra</h2>
-
+    <br>
+    <br>
   <div class="row">
     <div class="col-lg-6">
-        <div class="box-element" id="form-wrapper">
-            <form id="form">
-                <div id="user-info">
-                    <div class="form-field">
-                        <input required class="form-control" type="text" name="name" placeholder="Name..">
-                    </div>
-                    <div class="form-field">
-                        <input required class="form-control" type="email" name="email" placeholder="Email..">
-                    </div>
-                </div>
-
-                <div id="shipping-info">
+        <div class="content-box" id="form-wrapper">
+            <form id="form" >
+                <div >
+                    <h4 style="padding-top: 12px;" class="corPrincipal">Informação para Fatura</h4>
                     <hr>
-                    <p>Shipping Information:</p>
-                    <hr>
-                    <div class="form-field">
-                        <input class="form-control" type="text" name="address" placeholder="Address..">
+                    <div class="form__field">
+                        <label ><b style="font-size:1.2rem;">Nome</b></label>
+                        <input type="text" name="nome" value="{{profile.nome}}" class="input" id="nome">
                     </div>
-                    <div class="form-field">
-                        <input class="form-control" type="text" name="city" placeholder="City..">
+                    <div class="form__field">
+                        <label><b style="font-size:1.2rem;">Contribuinte</b></label>
+                        <input type="text" name="contribuinte" value="{{profile.contribuinte}}" class="input" id="contribuinte">
                     </div>
-                    <div class="form-field">
-                        <input class="form-control" type="text" name="state" placeholder="State..">
-                    </div>
-                    <div class="form-field">
-                        <input class="form-control" type="text" name="zipcode" placeholder="Zip code..">
-                    </div>
-                    <div class="form-field">
-                        <input class="form-control" type="text" name="country" placeholder="Zip code..">
-                    </div>
-                </div>
-
-                <hr>
-                <input id="form-button" class="btn btn-primary btn-block" type="submit" value="Continue">
+            
+                <div  style="padding-top:17px; text-align:right;" class="text-right form-wrapper">
+                    <input id="form-button" style="width:200px;" class="btn btnAdd btn-block"  type="submit" value="Continuar Pagamento">
+                </div>    
+            </div>
             </form>
         </div>
 
-        <br>
+        
         <div class="box-element hidden" id="payment-info">
-            <small>Paypal Options</small>
-        </br>
-        </br>
+            <h4 class="corPrincipal" style="padding-top: 13px;">Escolher Método</h4>
+            <hr>
+        
             <div id="paypal-button-container" >
-                
+             
             </div>
-            <!-- <button class="btn btn btn-outline-primary btn-sm" id="make-payment">Make Payment</button> -->
         </div>
 
     </div>
 
     <div class="col-lg-6">
         <div class="box-element">
-            <a  class="btn btn-outline-dark" href="{% url 'cart' %}">&#x2190; Back to Cart</a>
+            <h4 style="padding-top: 12px;" class="corPrincipal">Sumário do Pedido</h4>
+
             <hr>
-            <h3>Order Summary</h3>
-            <hr>
-            {% for item in items%}
+            <div style="text-align: right;"> 
+                <a  class="btn btnAdd" style="width:200px;" href="{% url 'cart' %}">&#x2190; voltar ao carrinho</a>
+            </div>
+            <br>
+            {% for item in items %}
             <div class="cart-row">
-                <div style="flex:2"><img class="row-image" src="{{ item.product.image }}"></div>
-                <div style="flex:2"><p>{{ item.product.name }}</p></div>
-                <div style="flex:1"><p>{{ item.product.price }}</p></div>
-                <div style="flex:1"><p>{{ item.order_item.quantity }}</p></div>
+                <div style="flex:1"><img class="row-image-checkout" src="{% static item.item.imagem.url %}"></div>
+                <div style="flex:1"><p>{{ item.item.nome }}</p></div>
+                <div style="flex:1"><p>{{ item.item.preco }}</p></div>
+                <div style="flex:1"><p>x{{ item.quantidade }}</p></div>
+                <div style="flex:1"><p>{{ item.item.restaurante }}</p></div>
             </div>
             {% endfor %}
-            <h5>Items: {{ order.get_number_items }}</h5>
-            <h5>Total: {{ order.get_cart_total|floatformat:2 }}</h5>
+            <h5>Items: {{ pedido.get_numero_items }}</h5>
+            <h5>Total: {{ pedido.get_total|floatformat:2 }}</h5>
         </div>
-
+        <button class="hidden" id="pagamentoSucesso" onclick="customAlert.alert('Pagamento concluído com Sucesso', 'Informação Pagamento')">
+            Pagamento executado com Sucesso
+        </button>
+        <button class="hidden" id="pagamentoSemSucesso" onclick="customAlert.alert('Pagamento não foi concluído', 'Informação Pagamento')">
+            Pagamento não realizado
+        </button>
     </div>
 </div>
  
 </div>
 {% include 'footer.html' %}
+
+<script>
+
+</script>
+
+<script src="https://www.paypal.com/sdk/js?client-id=Aa4yMT1Z2fp8P28H0Joup5-ltWJA_40qYHTEg3oMyJFHydb4COH39h7zw4V4hIG3uoTDh4I-v4PzpGzL&currency=EUR&disable-funding=credit"></script>
+
+<script>
+	var total = '{{pedido.get_total}}'
+	paypal.Buttons({
+
+		style:{
+			color:'white',
+			shape:'pill',
+            shape:'rect',
+
+		},
+
+		createOrder: function(data, actions){
+			return actions.order.create({
+				purchase_units: [{
+					amount: {
+						value: parseFloat(total).toFixed(2)
+					}
+				}]
+			});
+		},
+
+		onApprove: function(data, actions){
+			return actions.order.capture().then(function(details){
+				submitFormData()
+			
+			});
+		}
+	}).render('#paypal-button-container');	
+</script>
+
+<script type="text/javascript">
+
+	var user = '{{request.user}}'
+
+	// Pagamentos aparecer ao submeter
+	var form = document.getElementById('form')
+	form.addEventListener('submit', function(submited){
+		submited.preventDefault()
+		console.log('Form submited...')
+		document.getElementById('form-button').classList.add('hidden');
+		document.getElementById('payment-info').classList.remove('hidden');
+	})
+
+	
+
+	// Enviar informacao  para o backend
+	function submitFormData(){
+		
+		console.log('Payment button clicked')
+
+		var userFormData = {
+			'name': null,
+			'email': null,
+			'total':total
+		}
+
+		console.log('User Info:', userFormData)
+
+		var url = "/process_order/"
+		fetch(url,{
+			method:'POST',
+			headers:{
+				'Content-Type': 'application/json',
+				'X-CSRFToken': csrftoken
+			},
+			body:JSON.stringify({ 'form':userFormData,  }),
+		})
+		.then((response) => response.json())
+		.then((data) => {
+			console.log('Sucess:', data);
+			customAlert.alert('This is a custom alert with heading.','Heads Up!')
+			document.getElementById("pagamentoSucesso").click();
+  
+            setTimeout(function() { window.location.href = "{% url 'home' mesa %}" }, 3000);
+
+		})
+        document.getElementById("pagamentoSemSucesso").click();
+        // Esconde a form toda se o user estiver logado mas o envio ainda esta falso
+		document.getElementById('form-wrapper').classList.remove("hidden");
+		// Mostrar pagamento se user logado e quer comprar algo que nao necessita envio
+		document.getElementById('payment-info').classList.add("hidden");
+		}
+</script>
+
+<script>
+
+function CustomAlert(){
+  this.alert = function(message,title){
+    document.body.innerHTML = document.body.innerHTML + '<div id="dialogoverlay"></div><div id="dialogbox" class="slit-in-vertical"><div><div id="dialogboxhead"></div><div id="dialogboxbody"></div><div id="dialogboxfoot"></div></div></div>';
+
+    let dialogoverlay = document.getElementById('dialogoverlay');
+    let dialogbox = document.getElementById('dialogbox');
+    
+    let winH = window.innerHeight;
+    dialogoverlay.style.height = winH+"px";
+    
+    dialogbox.style.top = "100px";
+
+    dialogoverlay.style.display = "block";
+    dialogbox.style.display = "block";
+    
+    document.getElementById('dialogboxhead').style.display = 'block';
+
+    if(typeof title === 'undefined') {
+      document.getElementById('dialogboxhead').style.display = 'none';
+    } else {
+      document.getElementById('dialogboxhead').innerHTML = '<i class="fa fa-exclamation-circle" aria-hidden="true"></i> '+ title;
+    }
+    document.getElementById('dialogboxbody').innerHTML = message;
+   
+  }
+  
+  this.ok = function(){
+    document.getElementById('dialogbox').style.display = "none";
+    document.getElementById('dialogoverlay').style.display = "none";
+  }
+}
+
+let customAlert = new CustomAlert();
+
+</script>
 
 </body>
 </html>
