--- a/templates/delivery_crew.html
+++ b/templates/delivery_crew.html
@@ -14,7 +14,7 @@
         <div class="content-box" id="form-wrapper">
             
                 <div>
-                    <h4 style="padding-top: 12px; color:#94395b;" >Informação da Entrega <a href="{% url 'delivery' %}" class="corPrincipal"><i style="width:52%; text-align: right;" class="fa-solid fa-rotate-right"></i></a></h4>
+                    <h4 style="padding-top: 12px; color:#94395b;" >Pedidos por Entregar</h4>
                     <hr>
              {% if pedido %}
                 {% if pedido.pedido_entregue%}
@@ -75,7 +75,7 @@
 
     <div class="col-lg-6">
         <div class="box-element">
-            <h4 style="padding-top: 12px; color:#94395b;" >Sumário do Pedido</h4>
+            <h4 style="padding-top: 12px; color:#94395b;" >Ação a realizar</h4>
 
             <hr>
            
